<package>
  <name>ethzasl_apriltag</name>
  <description>ROS wrappers for C++ april tags library</description>
  <version>0.0.0</version>
  <author>Simon Lynen</author>
  <maintainer email="foo@foo.com">Someone</maintainer>
  <license>BSD/LGPL</license>
  <url>http://ros.org/wiki/ethzasl_apriltag</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>libopenscenegraph-dev</build_depend>
  <build_depend>openscenegraph</build_depend>
  <build_depend>cmake_modules</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>libopenscenegraph-dev</run_depend>
  <run_depend>openscenegraph</run_depend>
</package>


